testsuite/tests/typecheck/should_fail/tcfail014.stderr

tcfail014.hs:5:33: error:
    Occurs check: cannot construct the infinite type: r8 ~ r8 -> r7
    Relevant bindings include
      z :: r8 -> r7 (bound at tcfail014.hs:5:27)
      h :: (r8 -> r7) -> r7 (bound at tcfail014.hs:5:25)
    In the first argument of ‘z’, namely ‘z’
    In the expression: z z
    In an equation for ‘h’: h z = z z
